# learn-opengl

./: .gitignore  .gitmodules
01-creating-a-window/src/: main.c  window.c
02-hello-square/src/: main.c
02-hello-triangle/: CMakeLists.txt
02-hello-triangle/src/: main.c
03-shaders/: CMakeLists.txt
03-shaders/include/: shader.h
03-shaders/shaders/: shader.frag  shader.vert
03-shaders/src/: main.c
04-textures/: CMakeLists.txt
04-textures/include/: shader.h  window.h
04-textures/shaders/: shader.vert
04-textures/src/: main.c  shader.c  texture.c
05-transformations/include/: shader.h
05-transformations/shaders/: shader.vert
05-transformations/src/: file.c  main.c  window.c
06-coordinate-systems/: CMakeLists.txt
06-coordinate-systems/include/: texture.h  window.h
06-coordinate-systems/src/: main.c  shader.c  window.c
07-camera/: CMakeLists.txt
07-camera/shaders/: shader.frag  shader.vert
07-camera/src/: main.c  window.c
08-basic-lighting/include/: shader.h
08-basic-lighting/shaders/: lighting.frag  lighting.vert
08-basic-lighting/src/: main.c  shader.c  texture.c
09-materials/include/: shader.h
09-materials/shaders/: lighting.frag
09-materials/src/: main.c  shader.c
10-lighting-maps/shaders/: lighting.frag
10-lighting-maps/src/: camera.c  main.c
11-light-casters/include/: window.h
11-light-casters/shaders/: light.frag  lighting.frag
11-light-casters/src/: main.c  texture.c
12-multiple-lights/include/: shader.h  texture.h
12-multiple-lights/shaders/: lighting.frag
12-multiple-lights/src/: main.c
13-mesh/: CMakeLists.txt
13-mesh/include/: mesh.h
13-mesh/src/: main.c  mesh.c
14-model/: CMakeLists.txt
14-model/include/: camera.h  mesh.h  model.h
14-model/shaders/: lighting.vert
14-model/src/: camera.c  main.c  mesh.c  model.c  shader.c
15-depth-testing/shaders/: depth.frag  depth.vert  lighting.frag
15-depth-testing/src/: main.c
